<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CalculadoraIMC</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="altura">Escribe tu ALTURA actual:</string>
    <string name="Peso">Escribe tu PESO actual:</string>
    <string name="IMC">Índice de masa corporal:</string>
    <string name="Resultado">Atendiendo a su IMC, tiene:</string>
    <string name="btnCalcular">CalcularIMC</string>
    <string name="cm">cm.</string>
    <string name="kg">kg.</string>
    <string name="acercaDe">Acerca de</string>
    <string name="autor">Autor: Alberto García Olivero</string>
    <string name="finalizar">Finalizar</string>

</resources>
